➕ [CSB] - Add SNMP system-x module

--- a/system-x/services/all/pom.xml
+++ b/system-x/services/all/pom.xml
@@ -267,6 +267,10 @@
         </dependency>
         <dependency>
             <groupId>software.tnb</groupId>
+            <artifactId>system-x-snmp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>software.tnb</groupId>
             <artifactId>system-x-splunk</artifactId>
         </dependency>
         <dependency>
