--- a/system-x/services/pom.xml
+++ b/system-x/services/pom.xml
@@ -47,6 +47,7 @@
         <module>splunk</module>
         <module>microsoft</module>
         <module>apicurio-registry</module>
+        <module>snmp</module>
         <module>all</module>
     </modules>
 
