--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -381,6 +381,11 @@
             </dependency>
             <dependency>
                 <groupId>software.tnb</groupId>
+                <artifactId>system-x-snmp</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>software.tnb</groupId>
                 <artifactId>system-x-splunk</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
