[CSB-3069] - Opensearch system-x implementation

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -171,6 +171,16 @@
             </dependency>
             <dependency>
                 <groupId>software.tnb</groupId>
+                <artifactId>system-x-search-engine</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>software.tnb</groupId>
+                <artifactId>system-x-search-common</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>software.tnb</groupId>
                 <artifactId>system-x-elasticsearch</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
@@ -367,6 +377,11 @@
             <dependency>
                 <groupId>software.tnb</groupId>
                 <artifactId>system-x-mysql</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>software.tnb</groupId>
+                <artifactId>system-x-opensearch</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
